# discordemu

./: .config.example.yml  .gitignore  README.md  config.example.yml  pyproject.toml
src/: config.py
src/api/: main.py
src/api/gateway/: __init__.py  handler.py
src/api/routers/: __init__.py  gateway.py
src/models/: database.py
src/models/api/: gateway.py
