[tool.poetry]
name = "discordemu"
version = "1.0.0"
description = "An emulation of the Discord gateway and API for local testing."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
taskipy = "^1.8.1"
asyncpg = "^0.23.0"
python-dotenv = "^0.18.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start-dev = "uvicorn src.api.main:app --port 8080 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
